--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     </div>
                 </div>
                 <div class="about-image">
-                    <img src="Assets/Yahkoob_P_M.png" alt="Yahkoob P M - Architect" loading="eager" decoding="async"
+                    <img src="Yahkoob_P_M.png" alt="Yahkoob P M - Architect" loading="eager" decoding="async"
                         onerror="this.src='https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80'"
                         onload="this.style.opacity='1'" style="opacity: 0;">
                 </div>
